[metadata]
name = goal-tools
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = OpenStack Community-wide Goal Tools
description-file =
    README.rst
home-page = https://governance.openstack.org/tc/goals/index.html
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    goal_tools

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    import-goal = goal_tools.import_goal:main

[wheel]
universal = 1
