[metadata]
name = goal-tools
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = OpenStack Community-wide Goal Tools
description-file =
    README.rst
home-page = https://governance.openstack.org/tc/goals/index.html
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    goal_tools

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    import-goal = goal_tools.import_goal:main
    who-helped = goal_tools.who_helped.main:main
    python3-first = goal_tools.python3_first.main:main
	find-story = goal_tools.find_story:main
	update-tasks = goal_tools.update_tasks:main
	assign-task = goal_tools.assign_task:main
	list-tasks = goal_tools.list_tasks:main

who_helped =
    contributions list = goal_tools.who_helped.contributions:ListContributions
    contributions summarize = goal_tools.who_helped.summarize:SummarizeContributions
    contributions distinct = goal_tools.who_helped.distinct:DistinctContributions
    contributions query = goal_tools.who_helped.sql:QueryContributions
    contributions matrix = goal_tools.who_helped.matrix:MatrixContributions
	database create = goal_tools.who_helped.sql:DBCreate
    member show = goal_tools.who_helped.members:ShowMember
	changes query = goal_tools.who_helped.changes:QueryChanges
	cache remove = goal_tools.who_helped.cache:CacheRemove
	cache show = goal_tools.who_helped.cache:CacheShow
	review show = goal_tools.who_helped.review:ReviewShow
	top list = goal_tools.who_helped.top:TopN
	team show = goal_tools.who_helped.team:ShowTeam

python3_first =
    jobs extract = goal_tools.python3_first.jobs:JobsExtract
    jobs retain = goal_tools.python3_first.jobs:JobsRetain
    jobs update = goal_tools.python3_first.jobs:JobsUpdate
    jobs switch docs = goal_tools.python3_first.jobs:JobsSwitchDocs
    jobs switch packaging = goal_tools.python3_first.jobs:JobsSwitchPackaging
    jobs add py35 = goal_tools.python3_first.jobs:JobsAddPy35
    jobs add py36 = goal_tools.python3_first.jobs:JobsAddPy36
    jobs add lib = goal_tools.python3_first.jobs:JobsAddLibForwardTestingPy3
    repos clone = goal_tools.python3_first.repos:ReposClone
    repos list = goal_tools.python3_first.repos:ReposList
    patches list = goal_tools.python3_first.patches:PatchesList
    patches count = goal_tools.python3_first.patches:PatchesCount
    migration announce = goal_tools.python3_first.repos:MigrationAnnounce
    tox missing = goal_tools.python3_first.toxsettings:ToxMissingPy3
    tox fix = goal_tools.python3_first.toxsettings:ToxFixMissingPy3
	wheel missing = goal_tools.python3_first.wheelsettings:WheelMissingUniversal
	#wheel fix = goal_tools.python3_first.wheelsettings:WheelFixMissingUniversal

[wheel]
universal = 1
